Bug on mobile via only show up live on phone

--- a/src/components/ContactComponents/ContactForm.module.less
+++ b/src/components/ContactComponents/ContactForm.module.less
@@ -3,6 +3,7 @@
 .wrapper {
   .center();
   margin: 7% auto;
+  margin-bottom: 20%;
   flex-direction: column;
   .img {
     width: 400px;
@@ -37,7 +38,7 @@ form {
   .custom-layout(space-evenly, center);
   flex-direction: column;
   /*border: @showMe;*/
-  height: 85vh;
+  height: 75vh;
   padding: 3%;
   margin-bottom: 2%;
   @media (min-width: 768px) {
@@ -108,6 +109,7 @@ form {
 }
 
 ul {
+  text-align: center;
   li {
     input {
       font-size: 2rem;
